--- a/tests/model_tests.ipynb
+++ b/tests/model_tests.ipynb
@@ -10,102 +10,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a86992c2",
+   "execution_count": 18,
+   "id": "940a9326",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "llama_init_from_model: n_batch is less than GGML_KQ_MASK_PAD - increasing to 64\n",
+      "llama_init_from_model: n_ctx_per_seq (512) < n_ctx_train (2048) -- the full capacity of the model will not be utilized\n",
+      "ggml_metal_init: skipping kernel_get_rows_bf16                     (not supported)\n",
+      "ggml_metal_init: skipping kernel_mul_mv_bf16_f32                   (not supported)\n",
+      "ggml_metal_init: skipping kernel_mul_mv_bf16_f32_1row              (not supported)\n",
+      "ggml_metal_init: skipping kernel_mul_mv_bf16_f32_l4                (not supported)\n",
+      "ggml_metal_init: skipping kernel_mul_mv_bf16_bf16                  (not supported)\n",
+      "ggml_metal_init: skipping kernel_mul_mv_id_bf16_f32                (not supported)\n",
+      "ggml_metal_init: skipping kernel_mul_mm_bf16_f32                   (not supported)\n",
+      "ggml_metal_init: skipping kernel_mul_mm_id_bf16_f32                (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_bf16_h64           (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_bf16_h80           (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_bf16_h96           (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_bf16_h112          (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_bf16_h128          (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_bf16_h256          (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_vec_bf16_h128      (not supported)\n",
+      "ggml_metal_init: skipping kernel_flash_attn_ext_vec_bf16_h256      (not supported)\n",
+      "ggml_metal_init: skipping kernel_cpy_f32_bf16                      (not supported)\n",
+      "ggml_metal_init: skipping kernel_cpy_bf16_f32                      (not supported)\n",
+      "ggml_metal_init: skipping kernel_cpy_bf16_bf16                     (not supported)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Once upon a time, I was a little girl, living in a small village. My parents were kind and loving, and they always made sure I had everything I needed. As I grew older, I became more independent, but I still remained close to them. One day, I received a letter in the mail from a man named Jack. Jack was a wealthy man, and he wanted to marry me. I was shocked and scared. How could he want to marry me when he was so wealthy himself? I knew that if I didn’t marry him, my parents would be angry and I might never see them again. I knew\n"
+     ]
+    }
+   ],
    "source": [
-    "# py\n",
-    "\"\"\"\n",
-    "Module for generating contextual questions about captured images using a local LLM.\n",
-    "Works with the User_Detection module to provide personalized image understanding.\n",
-    "\"\"\"\n",
-    "\n",
-    "import logging\n",
-    "import os\n",
-    "from typing import List, Dict, Any\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
-    "import torch\n",
-    "\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "class ImageContextGenerator:\n",
-    "    def __init__(self, model_path: str = \"local_models/llama3-8b\"):\n",
-    "        \"\"\"\n",
-    "        Initialize the image context question generator with a local LLM.\n",
-    "        \n",
-    "        Parameters:\n",
-    "            model_path (str): Path to the local model files\n",
-    "        \"\"\"\n",
-    "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "        logger.info(f\"Loading LLM model from {model_path} on {self.device}\")\n",
-    "        \n",
-    "        try:\n",
-    "            self.tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
-    "            self.model = AutoModelForCausalLM.from_pretrained(\n",
-    "                model_path,\n",
-    "                torch_dtype=torch.float16 if self.device == \"cuda\" else torch.float32,\n",
-    "                low_cpu_mem_usage=True,\n",
-    "                device_map=\"auto\"\n",
-    "            )\n",
-    "            logger.info(\"LLM model loaded successfully\")\n",
-    "        except Exception as e:\n",
-    "            logger.error(f\"Failed to load LLM model: {e}\")\n",
-    "            raise\n",
-    "    \n",
-    "    def generate_questions(self):\n",
-    "        prompt = f\"\"\"\n",
-    "        Tell me a Joke\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        inputs = self.tokenizer(prompt, return_tensors=\"pt\").to(self.device)\n",
-    "        \n",
-    "        with torch.no_grad():\n",
-    "            outputs = self.model.generate(\n",
-    "                inputs[\"input_ids\"],\n",
-    "                max_new_tokens=150,\n",
-    "                temperature=0.7,\n",
-    "                top_p=0.9,\n",
-    "                do_sample=True,\n",
-    "                pad_token_id=self.tokenizer.eos_token_id\n",
-    "            )\n",
-    "        \n",
-    "        response = self.tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-    "        \n",
-    "        # Extract just the generated questions part\n",
-    "        questions_text = response.split(\"Questions:\")[-1].strip()\n",
-    "        \n",
-    "        # Parse into separate questions (assuming numbered or line-separated format)\n",
-    "        questions = [q.strip() for q in questions_text.split(\"\\n\") if q.strip()]\n",
-    "        \n",
-    "        logger.info(f\"Generated {len(questions)} contextual questions\")\n",
-    "        return questions\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cd90ee9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Add parent directory to path to import modules\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "\n",
-    "# Import the module\n",
-    "from Image_Understanding.context_generator import ImageContextGenerator\n",
-    "\n",
-    "# Initialize the generator with a small test model\n",
-    "context_gen = ImageContextGenerator(model_path=\"TheBloke/Phi-3-mini-4k-instruct-GGUF\")\n",
+    "# Install with: pip install llama-cpp-python\n",
+    "from llama_cpp import Llama\n",
     "\n",
     "\n",
-    "answer = context_gen.get_answer()\n",
+    "# Model path - change this to where you download the model\n",
+    "model_path = \"../Models/tinyllama-1.1b-chat-v1.0.Q8_0.gguf\"\n",
     "\n",
-    "print(\"\\nGenerated answer:\")\n",
-    "print(answer)"
+    "# Load the model\n",
+    "llm = Llama(\n",
+    "    model_path=model_path,\n",
+    "    n_ctx=512,         # Small context window for faster inference (context win = how much text the model can consider at once) (inc = better at long prompts but more RAM dec = faster less ram but worse at long prompts)\n",
+    "    n_threads=4,       # Adjust based on your CPU cores (num of cpu cors to use for parallel processing) (inc = more cpu usage dec = less cpu usage)\n",
+    "    n_batch=32,        # Lower batch size for faster inference (num of tokens to process at once) (inc = more tokens at once hencse better throughput dec = less tokens at once)\n",
+    "    f16_kv=True,          # Use half-precision for key/value cache\n",
+    "    use_mlock=True,       # Keep model in RAM\n",
+    "    verbose=False,\n",
+    "    n_gpu_layers=-1 \n",
+    ")\n",
+    "\n",
+    "# Test the model\n",
+    "output = llm(\n",
+    "    \"Once upon a time,\",\n",
+    "    max_tokens=128,     # Reduced for faster response\n",
+    "    echo=True\n",
+    ")\n",
+    "print(output[\"choices\"][0][\"text\"])"
    ]
   }
  ],
@@ -116,7 +86,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.10"
   }
  },
