--- a/tests/model_tests.ipynb
+++ b/tests/model_tests.ipynb
@@ -5,7 +5,7 @@
    "id": "2a532410",
    "metadata": {},
    "source": [
-    "# LLM test"
+    "# LLM test (depreciated no longer used)"
    ]
   },
   {
