--- a/tests/model_tests.ipynb
+++ b/tests/model_tests.ipynb
@@ -25,20 +25,20 @@
     "# Load the model\n",
     "llm = Llama(\n",
     "    model_path=model_path,\n",
-    "    n_ctx=512,         # Small context window for faster inference (context win = how much text the model can consider at once) (inc = better at long prompts but more RAM dec = faster less ram but worse at long prompts)\n",
-    "    n_threads=4,       # Adjust based on your CPU cores (num of cpu cors to use for parallel processing) (inc = more cpu usage dec = less cpu usage)\n",
-    "    n_batch=32,        # Lower batch size for faster inference (num of tokens to process at once) (inc = more tokens at once hencse better throughput dec = less tokens at once)\n",
-    "    f16_kv=True,          # Use half-precision for key/value cache\n",
-    "    use_mlock=True,       # Keep model in RAM\n",
+    "    n_ctx=512,  # Small context window for faster inference (context win = how much text the model can consider at once) (inc = better at long prompts but more RAM dec = faster less ram but worse at long prompts)\n",
+    "    n_threads=4,  # Adjust based on your CPU cores (num of cpu cors to use for parallel processing) (inc = more cpu usage dec = less cpu usage)\n",
+    "    n_batch=32,  # Lower batch size for faster inference (num of tokens to process at once) (inc = more tokens at once hencse better throughput dec = less tokens at once)\n",
+    "    f16_kv=True,  # Use half-precision for key/value cache\n",
+    "    use_mlock=True,  # Keep model in RAM\n",
     "    verbose=False,\n",
-    "    n_gpu_layers=-1 \n",
+    "    n_gpu_layers=-1,\n",
     ")\n",
     "\n",
     "# Test the model\n",
     "output = llm(\n",
     "    \"Once upon a time,\",\n",
-    "    max_tokens=128,     # Reduced for faster response\n",
-    "    echo=True\n",
+    "    max_tokens=128,  # Reduced for faster response\n",
+    "    echo=True,\n",
     ")\n",
     "print(output[\"choices\"][0][\"text\"])"
    ]
